separate request/response models from db models
