# api/docs/swagger.yaml
@@ -1,22 +1,50 @@
 basePath: /api/v1
 definitions:
-  db.Contribution:
+  request.RequestCreateContribution:
+    properties:
+      amount:
+        type: number
+    type: object
+  request.RequestCreateGoal:
+    properties:
+      goal_amount:
+        type: number
+      name:
+        type: string
+      target_date:
+        type: string
+    type: object
+  request.RequestUpdateContribution:
+    properties:
+      amount:
+        type: number
+    type: object
+  request.RequestUpdateGoal:
+    properties:
+      goal_amount:
+        type: number
+      name:
+        type: string
+      target_date:
+        type: string
+    type: object
+  response.ResponesContribution:
     properties:
       amount:
         type: number
       created_at:
         type: string
-      goal:
-        $ref: '#/definitions/db.Goal'
-      goal_id:
-        type: integer
       id:
         type: integer
       updated_at:
         type: string
     type: object
-  db.Goal:
+  response.ResponesGoal:
     properties:
+      ads_by_amount:
+        type: integer
+      catalog_url:
+        type: string
       goal_amount:
         type: number
       id:
@@ -26,17 +54,6 @@ definitions:
       slug:
         type: string
       target_date:
-        type: string
-    type: object
-  handlers.ContributionRespones:
-    properties:
-      amount:
-        type: number
-      created_at:
-        type: string
-      id:
-        type: integer
-      updated_at:
         type: string
     type: object
   utils.HTTPError:
@@ -68,32 +85,47 @@ info:
 paths:
   /v1/goal:
     get:
-      description: Get goals list
+      description: Get goal by :id
+      parameters:
+      - description: Goal ID
+        in: path
+        name: id
+        required: true
+        type: integer
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            allOf:
-            - $ref: '#/definitions/utils.JSONResult'
-            - properties:
-                data:
-                  items:
-                    $ref: '#/definitions/db.Goal'
-                  type: array
-              type: object
+            items:
+              allOf:
+              - $ref: '#/definitions/utils.JSONResult'
+              - properties:
+                  data:
+                    items:
+                      $ref: '#/definitions/response.ResponesGoal'
+                    type: array
+                type: object
+            type: array
         "500":
           description: Internal Server Error
           schema:
             $ref: '#/definitions/utils.HTTPError'
-      summary: Goals List
+      summary: Goals Item
       tags:
       - Goals
     post:
       consumes:
       - application/json
       description: Create goal
+      parameters:
+      - description: Goal object for create
+        in: body
+        name: goal
+        required: true
+        schema:
+          $ref: '#/definitions/request.RequestCreateGoal'
       produces:
       - application/json
       responses:
@@ -104,7 +136,7 @@ paths:
             - $ref: '#/definitions/utils.JSONResult'
             - properties:
                 data:
-                  $ref: '#/definitions/db.Goal'
+                  $ref: '#/definitions/response.ResponesGoal'
               type: object
         "400":
           description: Bad Request
@@ -120,20 +152,28 @@ paths:
   /v1/goal/:goal/contribution:
     get:
       description: Get contributions list
+      parameters:
+      - description: Goal ID for contribution
+        in: path
+        name: goal
+        required: true
+        type: integer
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            allOf:
-            - $ref: '#/definitions/utils.JSONResult'
-            - properties:
-                data:
-                  items:
-                    $ref: '#/definitions/handlers.ContributionRespones'
-                  type: array
-              type: object
+            items:
+              allOf:
+              - $ref: '#/definitions/utils.JSONResult'
+              - properties:
+                  data:
+                    items:
+                      $ref: '#/definitions/response.ResponesContribution'
+                    type: array
+                type: object
+            type: array
         "404":
           description: Not Found
           schema:
@@ -147,6 +187,18 @@ paths:
       - Contribution
     post:
       description: Create contribuitions
+      parameters:
+      - description: Goal ID for contribution
+        in: path
+        name: goal
+        required: true
+        type: integer
+      - description: Contribution object for create
+        in: body
+        name: contribuition
+        required: true
+        schema:
+          $ref: '#/definitions/request.RequestCreateContribution'
       produces:
       - application/json
       responses:
@@ -157,7 +209,7 @@ paths:
             - $ref: '#/definitions/utils.JSONResult'
             - properties:
                 data:
-                  $ref: '#/definitions/db.Contribution'
+                  $ref: '#/definitions/response.ResponesContribution'
               type: object
         "404":
           description: Not Found
@@ -173,6 +225,17 @@ paths:
   /v1/goal/:goal/contribution/:id:
     delete:
       description: Delete contribution by id
+      parameters:
+      - description: Goal ID for contribution
+        in: path
+        name: goal
+        required: true
+        type: integer
+      - description: Contribution ID
+        in: path
+        name: id
+        required: true
+        type: integer
       produces:
       - application/json
       responses:
@@ -197,6 +260,23 @@ paths:
       - Contribution
     put:
       description: Update contributions by id
+      parameters:
+      - description: Goal ID for contribution
+        in: path
+        name: goal
+        required: true
+        type: integer
+      - description: Contribution ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Contribution`s fields for update
+        in: body
+        name: contribution
+        required: true
+        schema:
+          $ref: '#/definitions/request.RequestUpdateContribution'
       produces:
       - application/json
       responses:
@@ -207,7 +287,7 @@ paths:
             - $ref: '#/definitions/utils.JSONResult'
             - properties:
                 data:
-                  $ref: '#/definitions/db.Contribution'
+                  $ref: '#/definitions/response.ResponesContribution'
               type: object
         "404":
           description: Not Found
@@ -223,6 +303,12 @@ paths:
   /v1/goal/:id:
     delete:
       description: Delete goal by id
+      parameters:
+      - description: Goal ID
+        in: path
+        name: id
+        required: true
+        type: integer
       produces:
       - application/json
       responses:
@@ -246,7 +332,7 @@ paths:
       tags:
       - Goals
     get:
-      description: Get goal by :id
+      description: Get goals list
       produces:
       - application/json
       responses:
@@ -257,7 +343,7 @@ paths:
             - $ref: '#/definitions/utils.JSONResult'
             - properties:
                 data:
-                  $ref: '#/definitions/db.Goal'
+                  $ref: '#/definitions/response.ResponesGoal'
               type: object
         "404":
           description: Not Found
@@ -267,20 +353,37 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/utils.HTTPError'
-      summary: Goal Item
+      summary: Goal List
       tags:
       - Goals
     put:
       consumes:
       - application/json
       description: Update goal by id
+      parameters:
+      - description: Goal ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Goal`s fields for update
+        in: body
+        name: goal
+        required: true
+        schema:
+          $ref: '#/definitions/request.RequestUpdateGoal'
       produces:
       - application/json
       responses:
         "200":
-          description: ok
+          description: OK
           schema:
-            type: string
+            allOf:
+            - $ref: '#/definitions/utils.JSONResult'
+            - properties:
+                data:
+                  $ref: '#/definitions/response.ResponesGoal'
+              type: object
         "404":
           description: Not Found
           schema:
